# alertmsg-rust

./: Cargo.toml  README.md
src/: main.rs
src/utils/: cli.rs  http.rs  message.rs  mod.rs
