[package]
name = "rmsg"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "*", features = ["json", "charset"] }
clap = { version = "2", default-features = false }
serde_json = "1.0"
